# palette_converter

./: CMakeLists.txt
src/: array.hpp  bitmap.cpp  bitmap.hpp  exception.hpp  palette_converter.cpp
